feat: 引入 Skills 系统及自动激活架构，更新文档

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -240,7 +240,7 @@
         </div>
         <div class="input-area">
             <select id="agentSelector" style="max-width: 150px;">
-                <option value="">自动路由 (Auto)</option>
+                <option value="">Auto</option>
             </select>
             <input type="text" id="userInput" placeholder="输入您的指令..." onkeypress="handleKeyPress(event)">
             <button onclick="sendMessage()" id="sendBtn">发送</button>
